--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "@supabase/supabase-js": "^1.24.0",
+    "axios": "^0.23.0",
     "cheerio": "^1.0.0-rc.10",
     "core-js": "^3.6.5",
     "md5": "^2.3.0",
